--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,21 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_score"
-            android:textSize="30sp"
+            android:text="当前分数为\n"
+            android:textSize="25sp"
             android:padding="10dp"
             android:gravity="center"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_most_score"
+            android:text="最高分数为:\n300"
+            android:textSize="25sp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content" />
     </LinearLayout>
     <com.tzl.game.widget.GameView2048
