--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,8 @@
         android:id="@+id/game_view"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        app:game_horizontal="4"
+        app:game_vertical="4"
         app:game_text_size="20sp"/>
     <LinearLayout
         android:orientation="horizontal"
@@ -55,6 +57,36 @@
             android:text="重新开始"
             android:layout_weight="1"
             android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/bt_3"
+            android:text="选择3*3"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/bt_4"
+            android:layout_weight="1"
+            android:text="选择4*4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/bt_5"
+            android:layout_weight="1"
+            android:text="选择5*5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/bt_6"
+            android:layout_weight="1"
+            android:text="选择6*6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
