--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,20 @@
             android:layout_weight="1"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/bt_back"
+            android:text="后退一步"
+            style="@style/main_2048_change_bg" />
+        <Button
+            android:id="@+id/bt_restart"
+            android:text="重新开始"
+            style="@style/main_2048_change_bg"/>
+    </LinearLayout>
     <com.tzl.game.widget.GameView2048
         android:id="@+id/game_view"
         android:layout_width="300dp"
@@ -41,53 +55,41 @@
         app:game_horizontal="4"
         app:game_vertical="4"
         app:game_text_size="20sp"/>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/bt_back"
-            android:text="后退一步"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/bt_restart"
-            android:text="重新开始"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:layout_width="320dp"
         android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/bt_3"
-            android:text="选择3*3"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/bt_4"
-            android:layout_weight="1"
-            android:text="选择4*4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/bt_5"
-            android:layout_weight="1"
-            android:text="选择5*5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/bt_6"
-            android:layout_weight="1"
-            android:text="选择6*6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/bt_3"
+                android:text="选择3*3"
+                style="@style/main_2048_change_bg" />
+            <Button
+                android:id="@+id/bt_4"
+                android:text="选择4*4"
+                style="@style/main_2048_change_bg"  />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/bt_5"
+                android:text="选择5*5"
+                style="@style/main_2048_change_bg"  />
+            <Button
+                android:id="@+id/bt_6"
+                android:text="选择6*6"
+                style="@style/main_2048_change_bg"  />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
